# witnessed

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: coverage.yml  release-dryrun.yml  release.yml
src/: contextual.rs  intrinsic.rs  lib.rs  test_support.rs  tests_for_debug.rs  tests_for_eq.rs  tests_for_hash.rs  tests_for_ord.rs  tests_for_size.rs  tests_for_witness_by.rs  warrant.rs  witness.rs  witness_ext.rs  witnessed.rs  witnessing.rs
src/contextual/: warrant_in.rs  witness_in.rs  witnessed_in.rs  witnessed_in_owned.rs  witnessed_in_ref.rs
src/intrinsic/: warrant.rs  witness.rs  witnessed.rs
