[package]
name = "witnessed"
version = "0.3.0"
edition = "2024"
description = "Type-level witness wrapper for carrying validated invariants."
license = "MIT"
repository = "https://github.com/jcfangc/witnessed"
readme = "README.md"
keywords = ["witness", "invariant", "validation", "newtype"]
categories = ["rust-patterns"]


[lib]
doctest = false
